0027571: Bad implementation of NCollection_Sequence::Iterator

Reverse iterator after creation points to the first iterated item now (last item of sequence).
Test case was created.